# python-sirp

./: pyproject.toml
.github/workflows/: PyPI.yml
