[project]
name = "sirp"
version = "0.0.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Grigory Efimov", email = "grigory.efimov@gmail.com"},
]
maintainers = [
    {name = "Grigory Efimov", email = "grigory.efimov@gmail.com"},
]

[project.urls]
Homepage = "https://github.com/fb929/sirp"
Documentation = "https://github.com/fb929/sirp"
Repository = "https://github.com/fb929/sirp"
